# Adafruit_CircuitPython_ESP32SPI

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  README.md  README.rst  adafruit_esp32spi.py  adafruit_esp32spi_socket.py  optional_requirements.txt  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: build.yml  release.yml
adafruit_esp32spi/: PWMOut.py  __init__.py  adafruit_esp32spi.py  adafruit_esp32spi_requests.py  adafruit_esp32spi_server.py  adafruit_esp32spi_socket.py  adafruit_esp32spi_socketpool.py  adafruit_esp32spi_wifimanager.py  adafruit_esp32spi_wsgiserver.py  adafruite_esp32spi_wsgiserver.py  digitalio.py  socketpool.py  wifimanager.py
docs/: api.rst  conf.py  examples.rst  examples.rst.license  index.rst
examples/: ._  esp32spi_aio_post.py  esp32spi_cert.py  esp32spi_cheerlights.py  esp32spi_get_board_details.py  esp32spi_ipconfig.py  esp32spi_localtime.py  esp32spi_secrets.py  esp32spi_server.py  esp32spi_service_function.py  esp32spi_settings.py  esp32spi_settings.toml  esp32spi_simpletest.py  esp32spi_simpletest_rp2040.py  esp32spi_tcp_client.py  esp32spi_udp_client.py  esp32spi_wpa2ent_aio_post.py  esp32spi_wpa2ent_simpletest.py  esp32spi_wsgi_error_test.py  esp32spi_wsgiserver.py  settings.toml
examples/gpio/: esp32spi_gpio.py  gpio.md
examples/server/: esp32spi_wsgiserver.py
examples/server/static/: index.html  led_color_picker_example.js
examples/stress_tests/socket_client_server_stress/cp_client/: cp_socket_count_client.py
(+4 files in other folders)
